--- a/src/Login/Login.module.css
+++ b/src/Login/Login.module.css
@@ -1,25 +1,23 @@
-.popup-backdrop {
-  position: fixed;
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(172, 172, 172, 0.8);
+.header {
+  padding: 12px 24px;
+  background-color: #292929;
+}
+
+.logo {
+  width: 150px;
 }
 
 .popup {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #ffffff;
-  max-width: 800px;
-  padding: 40px;
-  box-shadow: 3px 3px 5px;
+  margin: 80px auto;
+  background-color: #525252;
+  width: 300px;
+  padding: 30px 40px;
+  box-shadow: 2px 2px 4px #0f0f0f;
   border-radius: 10px;
-  color: #838383;
-  position: relative;
+  color: #fff;
 }
 
 .popup-title {
@@ -37,6 +35,8 @@
 .popup-input {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 4px;
 }
 
 .close {
@@ -53,6 +53,7 @@
 }
 
 .error-message {
-  color: #ff0000;
+  text-align: center;
+  color: #f36b74;
   font-size: 12px;
 }
