--- a/src/shared/ui/Button.module.css
+++ b/src/shared/ui/Button.module.css
@@ -3,11 +3,12 @@
   border: none;
   height: 32px;
   font-size: 14px;
+  font-weight: 700;
   border-radius: 6px;
   padding: 4px 15px;
-  box-shadow: 0 2px 0 rgba(5, 145, 255, 0.1);
+  box-shadow: 1px 1px 2px 0 rgba(36, 18, 18, 0.445);
   cursor: pointer;
-  transition: background-color 0.1s;
+  transition: background-color 0.15s;
 }
 
 .button-circle {
@@ -22,24 +23,24 @@
   border-radius: 50%;
   box-shadow: 0 2px 0 rgba(5, 145, 255, 0.1);
   cursor: pointer;
-  transition: background-color 0.1s;
+  transition: background-color 0.2s;
 }
 
 .button-primary {
-  background-color: #1677ff;
+  background-color: #ca3e47;
   color: #fff;
 }
 
 .button-primary:hover {
-  background-color: #4096ff;
+  background-color: #be3a43;
 }
 
 .button-primary:active {
-  background-color: #0958d9;
+  background-color: #a3333b;
 }
 
 .button-primary:disabled {
-  background-color: #a9caf8;
+  background-color: #d66970;
 }
 
 .button-secondary {
