--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,15 @@
   line-height: 1.5;
   font-weight: 400;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  background-color: #313131;
+  color: #fff;
+}
