--- a/src/WorkorderList/WorkorderList.module.css
+++ b/src/WorkorderList/WorkorderList.module.css
@@ -5,4 +5,15 @@
 
 .table {
   margin: auto;
+  border-collapse: collapse;
+}
+
+.tr {
+  /* box-shadow: 0 1px 0px 0px #555555; */
+  border-bottom: solid 1px #6d6c6c52;
+}
+
+.th,
+td {
+  padding: 8px 24px;
 }
