--- a/src/WorkorderList/WorkorderList.module.css
+++ b/src/WorkorderList/WorkorderList.module.css
@@ -1,19 +1,28 @@
+.main {
+  margin: auto;
+  max-width: 1000px;
+}
+
 .header {
+  margin-bottom: 0;
   text-align: center;
   font-size: 24px;
 }
 
 .table {
-  margin: auto;
+  width: 100%;
   border-collapse: collapse;
 }
 
 .tr {
-  /* box-shadow: 0 1px 0px 0px #555555; */
   border-bottom: solid 1px #6d6c6c52;
 }
 
 .th,
 td {
   padding: 8px 24px;
+}
+
+.td-center {
+  text-align: center;
 }
