--- a/src/shared/ui/Select.module.css
+++ b/src/shared/ui/Select.module.css
@@ -7,7 +7,7 @@
   transition-property: background-color;
   transition-duration: 0.15s;
   font-size: 16px;
-  color: #fff;
+  color: #a3a3a3;
 }
 
 .select:hover {
