--- a/src/WorkorderList/Pagination.module.css
+++ b/src/WorkorderList/Pagination.module.css
@@ -1,23 +1,23 @@
 .pagination {
   display: flex;
-  justify-content: space-between;
-  align-items: baseline;
+  justify-content: center;
+  align-items: center;
   padding: 16px 32px;
+  gap: 8px;
 }
 
 .page-back-next {
+  display: inline-flex;
+  align-items: center;
   color: #c4c4c4;
-  font-size: 16px;
-  font-weight: 500;
   border: 0;
   background-color: transparent;
   cursor: pointer;
 }
 
 .pages {
-  color: #c4c4c4;
+  color: #a3a3a3;
   font-size: 16px;
-  font-style: italic;
   border: 0;
   background-color: transparent;
   cursor: pointer;
