--- a/src/WorkorderList/WorkorderList.module.css
+++ b/src/WorkorderList/WorkorderList.module.css
@@ -18,11 +18,11 @@
   border-bottom: solid 1px #6d6c6c52;
 }
 
-.th,
-td {
+.td {
   padding: 8px 24px;
 }
 
 .td-center {
   text-align: center;
+  white-space: nowrap;
 }
