--- a/src/shared/ui/Button.module.css
+++ b/src/shared/ui/Button.module.css
@@ -1,4 +1,7 @@
 .button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   margin: 0 1px;
   border: none;
   height: 28px;
