--- a/src/workorders/shared/CreateWorkorder.module.css
+++ b/src/workorders/shared/CreateWorkorder.module.css
@@ -14,7 +14,6 @@
   flex-direction: column;
   align-items: center;
   background-color: #525252;
-  width: 300px;
   padding: 24px;
   box-shadow: 2px 2px 4px #0f0f0f;
   border-radius: 10px;
@@ -25,6 +24,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  max-width: 300px;
 }
 
 .popup-input {
