--- a/src/workorders/WorkorderItem/ProductList.module.css
+++ b/src/workorders/WorkorderItem/ProductList.module.css
@@ -7,3 +7,37 @@
   display: flex;
   gap: 8px;
 }
+
+.link {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ca3e47;
+  padding: 1px 6px;
+  color: #fff;
+  border: none;
+  height: 28px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 6px;
+  box-shadow: 1px 1px 2px 0 rgba(36, 18, 18, 0.445);
+  cursor: pointer;
+  transition: background-color 0.15s;
+}
+
+.link:active,
+.link:visited,
+.link:hover,
+.link:link,
+.link:focus {
+  color: #fff;
+  text-decoration: none;
+}
+
+.link:hover {
+  background-color: #be3a43;
+}
+
+.link:active {
+  background-color: #a3333b;
+}
